--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-node_modules
-x2_cleaned
-x3_renamed
-x4_txtmap
-x5_txtapply
-x6_cssdel
+node_modules/
+x2_cleaned/
+x3_renamed/
+x4_txtmap/
+x5_txtapply/
+x6_cssdel/
