--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "clean": "./cleaner.js",
     "rename": "./renamer.js",
     "cssdel": "./cssdel.js",
-    "txtmap": "./txtmap.js"
+    "txtmap": "./txtmap.js",
+    "del": "./del.js"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
