--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "renamer",
-  "version": "6.1.0",
+  "version": "6.2.0",
   "bin": {
-    "clean": "node ./cleaner.js",
-    "rename": "node ./renamer.js",
-    "cssdel": "node ./cssdel.js",
-    "txtmap": "node ./txtmap.js",
-    "txtapply": "node ./txtapply.js",
-    "del": "node ./del.js"
+    "clean": "node ./commands/cleaner.js",
+    "rename": "node ./commands/renamer.js",
+    "cssdel": "node ./commands/cssdel.js",
+    "txtmap": "node ./commands/txtmap.js",
+    "txtapply": "node ./commands/txtapply.js",
+    "del": "node ./commands/del.js"
   },
   "scripts": {
     "tomap": "npm run clean && npm run rename && npm run cssdel && npm run txtmap",
-    "clean": "node ./cleaner.js",
-    "rename": "node ./renamer.js",
-    "cssdel": "node ./cssdel.js",
-    "txtmap": "node ./txtmap.js",
-    "txtapply": "node ./txtapply.js",
-    "del": "node ./del.js"
+    "clean": "node ./commands/cleaner.js",
+    "rename": "node ./commands/renamer.js",
+    "cssdel": "node ./commands/cssdel.js",
+    "txtmap": "node ./commands/txtmap.js",
+    "txtapply": "node ./commands/txtapply.js",
+    "del": "node ./commands/del.js"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
